--- a/TestExcel/Views/ImportExcel/Success.cshtml
+++ b/TestExcel/Views/ImportExcel/Success.cshtml
@@ -21,65 +21,47 @@
             @Html.DisplayNameFor(model => model.SUBJECT_CREDIT)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.SUBJECT_SECTION)
+            @Html.DisplayNameFor(model => model.SUBJECT_MID)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.SUBJECT_DAY)
+            @Html.DisplayNameFor(model => model.SUBJECT_FINAL)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.SUBJECT_TIME)
+            @Html.DisplayNameFor(model => model.SUBJECT_TIMEMID)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.SUBJECT_CLASSROOM)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.SUBJECT_TEACHER)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.SUBJECT_SECT)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.SUBJECT_YEAR)
+            @Html.DisplayNameFor(model => model.SUBJECT_TIMEFINAL)
         </th>
         <th></th>
     </tr>
 
-@foreach (var item in ViewBag.model) {
+@foreach (var item in Model) {
     <tr>
         <td>
-            @item.SUBJECT_ID
+            @Html.DisplayFor(modelItem => item.SUBJECT_ID)
         </td>
         <td>
-            @item.SUBJECT_NAME
+            @Html.DisplayFor(modelItem => item.SUBJECT_NAME)
         </td>
         <td>
-            @item.SUBJECT_CREDIT
+            @Html.DisplayFor(modelItem => item.SUBJECT_CREDIT)
         </td>
         <td>
-            @item.SUBJECT_SECTION
+            @Html.DisplayFor(modelItem => item.SUBJECT_MID)
         </td>
         <td>
-            @item.SUBJECT_DAY
+            @Html.DisplayFor(modelItem => item.SUBJECT_FINAL)
         </td>
         <td>
-            @item.SUBJECT_TIME
+            @Html.DisplayFor(modelItem => item.SUBJECT_TIMEMID)
         </td>
         <td>
-            @item.SUBJECT_CLASSROOM
+            @Html.DisplayFor(modelItem => item.SUBJECT_TIMEFINAL)
         </td>
         <td>
-            @item.SUBJECT_TEACHER
-        </td>
-        <td>
-            @item.SUBJECT_SECT
-        </td>
-        <td>
-            @item.SUBJECT_YEAR
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id = item.ID }) |
-            @Html.ActionLink("Details", "Details", new { id = item.ID }) |
-            @Html.ActionLink("Delete", "Delete", new { id = item.ID })
+            @Html.ActionLink("Edit", "Edit", new { id=item.ID }) |
+            @Html.ActionLink("Details", "Details", new { id=item.ID }) |
+            @Html.ActionLink("Delete", "Delete", new { id=item.ID })
         </td>
     </tr>
 }
