--- a/TestExcel/Views/Shared/_Navbar.cshtml
+++ b/TestExcel/Views/Shared/_Navbar.cshtml
@@ -14,6 +14,12 @@
                 <li>@Html.ActionLink("Next", "Index", "TimeSchedule")</li>
                 @*<li>@Html.ActionLink("Contact", "Contact", "Home")</li>*@
             </ul>
+            <ul class="nav navbar-nav navbar-right">
+                @if (Session["Username"] != null)
+                {
+                    <li><a href="@Url.Action("Logout","Login")" uk-icon="icon: sign-out"><i class="fa fa-sign-out" aria-hidden="true"></i> Logout</a></li>
+                }
+            </ul>
         </div>
     </div>
 </div>
