--- a/TestExcel/Views/TimeSchedule/Index.cshtml
+++ b/TestExcel/Views/TimeSchedule/Index.cshtml
@@ -92,9 +92,9 @@
 <br />
 @using (Html.BeginForm("updatedata", "TimeSchedule", FormMethod.Post))
 {
-    <table class="table" align=center border=1 cellspacing=0 cellpadding=3 bgcolor=#F1F1FD>
+    <table class="table table-responsive" style="font-size:14px" align=center border=1 cellspacing=0 cellpadding=3 bgcolor=#F1F1FD>
         <thead>
-            <tr bgcolor=#EA98FF>
+            <tr bgcolor="#D3D3D3">
                 <td><b>Day</b></td>
                 <td colspan="4" width="60px"><b>8:00</b></td>
                 <td colspan="4" width="60px"><b>9:00</b></td>
@@ -131,25 +131,19 @@
                             var TIME_START = int.Parse(tmp_TIME_START.ToString());
                             var TIME_END = int.Parse(tmp_TIME_END.ToString());
                             var TIME = (TIME_END - TIME_START) * 4;
-                            var uname = @Model.Where(x => x.SECTION_TIME_START == b && x.SECTION_DATE == date[a]).OrderBy(x => x.SECTION_TIME_START).LastOrDefault().SUBJECT_NAME;
-                            <td colspan="@TIME" bgcolor="#F4D9FF">
+                            var uname = @Model.Where(x => x.SECTION_TIME_START == b && x.SECTION_DATE == date[a]).OrderBy(x => x.SECTION_TIME_START).LastOrDefault().SUBJECT_ID;
+                            <td width="100%" colspan="@TIME" bgcolor="#D3D3D3">
                                 <div>
                                     @Html.Hidden(name, uname)
                                     </div>
-                                <div>
-                                    @Model.Where(x => x.SECTION_TIME_START == b && x.SECTION_DATE == date[a]).OrderBy(x => x.SECTION_TIME_START).LastOrDefault().SUBJECT_NAME
+                                <div valign="top" height="50px">
+                                    @Model.Where(x => x.SECTION_TIME_START == b && x.SECTION_DATE == date[a]).OrderBy(x => x.SECTION_TIME_START).LastOrDefault().SUBJECT_ID
                                 </div>
                             </td>
                         }
                         else if (check1 == null)
                         {
-                            <td name="@name" colspan="4">&nbsp;</td>
-                            @*<td colspan="4" bgcolor="#F4D9FF">
-                                    @Model.Where(x => x.SECTION_TIME_START < b && x.SECTION_TIME_END >= b && x.SECTION_DATE == date[a]).OrderBy(x => x.SECTION_TIME_START).LastOrDefault().SUBJECT_NAME
-                                </td>*@
-                            @*<td colspan="4" bgcolor="#F4D9FF">
-                                    @Model.Where(x => x.SECTION_TIME_START <= b && x.SECTION_TIME_END >= b && x.SECTION_DATE == date[a]).OrderBy(x => x.SECTION_TIME_START).LastOrDefault().SUBJECT_NAME
-                                </td>*@
+                            <td name="@name" height="50px" colspan="4"></td>
                         }
                     }
 
