--- a/TestExcel/Views/ImportExcel/Success.cshtml
+++ b/TestExcel/Views/ImportExcel/Success.cshtml
@@ -21,16 +21,16 @@
             @Html.DisplayNameFor(model => model.SUBJECT_CREDIT)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.SUBJECT_MID)
+            @Html.DisplayNameFor(model => model.SUBJECT_MIDTERM_DATE)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.SUBJECT_FINAL)
+            @Html.DisplayNameFor(model => model.SUBJECT_FINAL_DATE)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.SUBJECT_TIMEMID)
+            @Html.DisplayNameFor(model => model.SUBJECT_MIDTERM_TIME)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.SUBJECT_TIMEFINAL)
+            @Html.DisplayNameFor(model => model.SUBJECT_FINAL_TIME)
         </th>
         <th></th>
     </tr>
@@ -47,16 +47,16 @@
             @Html.DisplayFor(modelItem => item.SUBJECT_CREDIT)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.SUBJECT_MID)
+            @Html.DisplayFor(modelItem => item.SUBJECT_MIDTERM_DATE)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.SUBJECT_FINAL)
+            @Html.DisplayFor(modelItem => item.SUBJECT_FINAL_DATE)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.SUBJECT_TIMEMID)
+            @Html.DisplayFor(modelItem => item.SUBJECT_MIDTERM_TIME)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.SUBJECT_TIMEFINAL)
+            @Html.DisplayFor(modelItem => item.SUBJECT_FINAL_TIME)
         </td>
         <td>
             @Html.ActionLink("Edit", "Edit", new { id=item.ID }) |
