--- a/TestExcel/Views/ClassRoomSchedule/Building_62.cshtml
+++ b/TestExcel/Views/ClassRoomSchedule/Building_62.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<TestExcel.Data.BUILDING>
+﻿@model IEnumerable<TestExcel.Models.Building_Classroom>
 @{
     ViewBag.Title = "Building_62";
 }
@@ -26,13 +26,49 @@
         </tr>
     </thead>
     <tbody>
-        @foreach(var item in Model)
+        @foreach (var item in ViewBag.Model)
         {
         <tr>
             <td>@item.CLASSROOM_NAME</td>
+            @{
+                var e = item.CLASSROOM_NAME;
+            }
             @for (int b = 8; b <= 21; b++)
             {
-                <td colspan="4"></td>
+                @*<td colspan="4" width="60px">@e</td>*@
+                //var tid = item.CLASSROOM_NAME + "id" + b;
+                //var tname = item.CLASSROOM_NAME + "name" + b;
+                var check = Model.Where(x => x.SECTION_TIME_START == b && x.CLASSROOM_NAME == e).LastOrDefault();
+            var check1 = Model.Where(x => x.SECTION_TIME_START <= b && x.SECTION_TIME_END > b && x.CLASSROOM_NAME == e).OrderBy(x => x.SECTION_TIME_START).LastOrDefault();
+            if (check != null)
+            {
+                var tmp_TIME_START = Model.Where(x => x.SECTION_TIME_START == b && x.CLASSROOM_NAME == e).Last().SECTION_TIME_START;
+                var tmp_TIME_END = Model.Where(x => x.SECTION_TIME_START == b && x.CLASSROOM_NAME == e).Last().SECTION_TIME_END;
+                var TIME_START = int.Parse(tmp_TIME_START.ToString());
+                var TIME_END = int.Parse(tmp_TIME_END.ToString());
+                var TIME = (TIME_END - TIME_START) * 4;
+                var uid = Model.Where(x => x.SECTION_TIME_START == b && x.CLASSROOM_NAME == e).OrderBy(x => x.SECTION_TIME_START).LastOrDefault().SUBJECT_ID;
+                var uname = Model.Where(x => x.SECTION_TIME_START == b && x.CLASSROOM_NAME == e).OrderBy(x => x.SECTION_TIME_START).LastOrDefault().SUBJECT_NAME;
+                <td bgcolor="#D3D3D3" colspan="@TIME">
+                    <div>
+                        @foreach (var i in Model)
+                        {
+                            if (Model.Select(x => x.SECTION_CLASSROOM).ToString() == e)
+                            {
+                                @Model.Where(x => x.SECTION_TIME_START == b && x.CLASSROOM_NAME == e).Select(x => x.SUBJECT_NAME)
+                            }
+                        }
+                        @e
+                        @Model.Where(x => x.SECTION_TIME_START == b && x.CLASSROOM_NAME == e).OrderBy(x => x.SECTION_TIME_START).LastOrDefault().SUBJECT_ID
+                        @Model.Where(x => x.SECTION_TIME_START == b && x.CLASSROOM_NAME == e).OrderBy(x => x.SECTION_TIME_START).LastOrDefault().SUBJECT_NAME
+                    </div>
+                </td>
+            }
+            else if (check1 == null)
+
+            {
+                <td height="50px" colspan="4"></td>
+            }
             }
         </tr>
         }
