--- a/TestExcel/Views/ClassRoomSchedule/Building_62.cshtml
+++ b/TestExcel/Views/ClassRoomSchedule/Building_62.cshtml
@@ -2,9 +2,21 @@
 @{
     ViewBag.Title = "Building_62";
 }
-
+<script>
+    $(document).ready(function () {
+        $("#DDL_P").val(@ViewBag.DDLSelected);
+        $("#DDL_P").change(function () {
+            $("#P_FORM").submit();
+        });
+    });
+</script>
 <h2 class="text-center">ตารางการใช้ห้องเรียน</h2>
-<h2 class="text-center">ห้องเรียนอาคาร 62</h2>
+<h2 class="text-center">ห้องเรียนอาคาร ...</h2>
+@using (Html.BeginForm("Building_62", "ClassRoomSchedule", FormMethod.Post, new { id = "P_FORM", name = "P_FORM" }))
+{
+    @Html.DropDownList("DDL_P", (SelectList)ViewBag.ddl_Branch)
+}
+
 <table class="table table-responsive" id="Table" style="font-size:14px" align=center border=1 cellspacing=0 cellpadding=3 bgcolor=#F1F1FD>
     <thead>
         <tr bgcolor="#D3D3D3">
@@ -28,85 +40,85 @@
     <tbody>
         @foreach (var item in ViewBag.Model)
         {
-        <tr>
-            <td>@item.CLASSROOM_NAME</td>
-            @{
-                var e = item.CLASSROOM_NAME;
-            }
-            @for (int b = 8; b <= 21; b++)
-            {
-                @*<td colspan="4" width="60px">@e</td>*@
-                //var tid = item.CLASSROOM_NAME + "id" + b;
-                //var tname = item.CLASSROOM_NAME + "name" + b;
-                var check = Model.Where(x => x.SECTION_TIME_START == b && x.CLASSROOM_NAME == e).LastOrDefault();
-            var check1 = Model.Where(x => x.SECTION_TIME_START <= b && x.SECTION_TIME_END > b && x.CLASSROOM_NAME == e).OrderBy(x => x.SECTION_TIME_START).LastOrDefault();
-            if (check != null)
-            {
-                var tmp_TIME_START = Model.Where(x => x.SECTION_TIME_START == b && x.CLASSROOM_NAME == e).Last().SECTION_TIME_START;
-                var tmp_TIME_END = Model.Where(x => x.SECTION_TIME_START == b && x.CLASSROOM_NAME == e).Last().SECTION_TIME_END;
-                var TIME_START = int.Parse(tmp_TIME_START.ToString());
-                var TIME_END = int.Parse(tmp_TIME_END.ToString());
-                var TIME = (TIME_END - TIME_START) * 4;
-                var uid = Model.Where(x => x.SECTION_TIME_START == b && x.CLASSROOM_NAME == e).OrderBy(x => x.SECTION_TIME_START).LastOrDefault().SUBJECT_ID;
-                var uname = Model.Where(x => x.SECTION_TIME_START == b && x.CLASSROOM_NAME == e).OrderBy(x => x.SECTION_TIME_START).LastOrDefault().SUBJECT_NAME;
-                <td bgcolor="#D3D3D3" colspan="@TIME">
-                    <div>
-                        @foreach (var i in Model)
-                        {
-                            if (Model.Select(x => x.SECTION_CLASSROOM).ToString() == e)
-                            {
-                                @Model.Where(x => x.SECTION_TIME_START == b && x.CLASSROOM_NAME == e).Select(x => x.SUBJECT_NAME)
-                            }
-                        }
-                        @e
-                        @Model.Where(x => x.SECTION_TIME_START == b && x.CLASSROOM_NAME == e).OrderBy(x => x.SECTION_TIME_START).LastOrDefault().SUBJECT_ID
-                        @Model.Where(x => x.SECTION_TIME_START == b && x.CLASSROOM_NAME == e).OrderBy(x => x.SECTION_TIME_START).LastOrDefault().SUBJECT_NAME
-                    </div>
-                </td>
-            }
-            else if (check1 == null)
-
-            {
-                <td height="50px" colspan="4"></td>
-            }
-            }
-        </tr>
-        }
-        @*@for (int a = 1; a < Model.Where(x => x.BUILDING_NAME == 62).Count(); a++)
-        {
             <tr>
-                <td>@date[a] </td>
+                <td>@item.CLASSROOM_NAME</td>
+                @{
+                    var e = item.CLASSROOM_NAME;
+                }
                 @for (int b = 8; b <= 21; b++)
                 {
-                    var tid = date[a] + "id" + b;
-                    var tname = date[a] + "name" + b;
-                    var check = Model.Where(x => x.SECTION_TIME_START == b && x.SECTION_DATE == date[a]).LastOrDefault();
-                    var check1 = Model.Where(x => x.SECTION_TIME_START <= b && x.SECTION_TIME_END > b && x.SECTION_DATE == date[a]).OrderBy(x => x.SECTION_TIME_START).LastOrDefault();
+                    @*<td colspan="4" width="60px">@e</td>*@
+                    //var tid = item.CLASSROOM_NAME + "id" + b;
+                    //var tname = item.CLASSROOM_NAME + "name" + b;
+                    var check = Model.Where(x => x.SECTION_TIME_START == b && x.CLASSROOM_NAME == e).LastOrDefault();
+                    var check1 = Model.Where(x => x.SECTION_TIME_START <= b && x.SECTION_TIME_END > b && x.CLASSROOM_NAME == e).OrderBy(x => x.SECTION_TIME_START).LastOrDefault();
                     if (check != null)
                     {
-                        var tmp_TIME_START = Model.Where(x => x.SECTION_TIME_START == b && x.SECTION_DATE == date[a]).Last().SECTION_TIME_START;
-                        var tmp_TIME_END = Model.Where(x => x.SECTION_TIME_START == b && x.SECTION_DATE == date[a]).Last().SECTION_TIME_END;
+                        var tmp_TIME_START = Model.Where(x => x.SECTION_TIME_START == b && x.CLASSROOM_NAME == e).Last().SECTION_TIME_START;
+                        var tmp_TIME_END = Model.Where(x => x.SECTION_TIME_START == b && x.CLASSROOM_NAME == e).Last().SECTION_TIME_END;
                         var TIME_START = int.Parse(tmp_TIME_START.ToString());
                         var TIME_END = int.Parse(tmp_TIME_END.ToString());
                         var TIME = (TIME_END - TIME_START) * 4;
-                        var uid = Model.Where(x => x.SECTION_TIME_START == b && x.SECTION_DATE == date[a]).OrderBy(x => x.SECTION_TIME_START).LastOrDefault().SUBJECT_ID;
-                        var uname = Model.Where(x => x.SECTION_TIME_START == b && x.SECTION_DATE == date[a]).OrderBy(x => x.SECTION_TIME_START).LastOrDefault().SUBJECT_NAME;
-                        <td id="@tid" bgcolor="#D3D3D3" colspan="@TIME">
+                        var uid = Model.Where(x => x.SECTION_TIME_START == b && x.CLASSROOM_NAME == e).OrderBy(x => x.SECTION_TIME_START).LastOrDefault().SUBJECT_ID;
+                        var uname = Model.Where(x => x.SECTION_TIME_START == b && x.CLASSROOM_NAME == e).OrderBy(x => x.SECTION_TIME_START).LastOrDefault().SUBJECT_NAME;
+                        <td bgcolor="#D3D3D3" colspan="@TIME">
                             <div>
-                                @Html.Hidden(tid, uid)
-                                @Html.Hidden(tname, uname)
-                                @Model.Where(x => x.SECTION_TIME_START == b && x.SECTION_DATE == date[a]).OrderBy(x => x.SECTION_TIME_START).LastOrDefault().SUBJECT_ID
-                                @Model.Where(x => x.SECTION_TIME_START == b && x.SECTION_DATE == date[a]).OrderBy(x => x.SECTION_TIME_START).LastOrDefault().SUBJECT_NAME
+                                @foreach (var i in Model)
+                                {
+                                    if (Model.Select(x => x.SECTION_CLASSROOM).ToString() == e)
+                                    {
+                                        @Model.Where(x => x.SECTION_TIME_START == b && x.CLASSROOM_NAME == e).Select(x => x.SUBJECT_NAME)
+                                    }
+                                }
+                                @e
+                                @Model.Where(x => x.SECTION_TIME_START == b && x.CLASSROOM_NAME == e).OrderBy(x => x.SECTION_TIME_START).LastOrDefault().SUBJECT_ID
+                                @Model.Where(x => x.SECTION_TIME_START == b && x.CLASSROOM_NAME == e).OrderBy(x => x.SECTION_TIME_START).LastOrDefault().SUBJECT_NAME
                             </div>
                         </td>
                     }
                     else if (check1 == null)
 
                     {
-                        <td id="@tid" height="50px" colspan="4"></td>
+                        <td height="50px" colspan="4"></td>
                     }
                 }
             </tr>
-        }*@
+        }
+        @*@for (int a = 1; a < Model.Where(x => x.BUILDING_NAME == 62).Count(); a++)
+            {
+                <tr>
+                    <td>@date[a] </td>
+                    @for (int b = 8; b <= 21; b++)
+                    {
+                        var tid = date[a] + "id" + b;
+                        var tname = date[a] + "name" + b;
+                        var check = Model.Where(x => x.SECTION_TIME_START == b && x.SECTION_DATE == date[a]).LastOrDefault();
+                        var check1 = Model.Where(x => x.SECTION_TIME_START <= b && x.SECTION_TIME_END > b && x.SECTION_DATE == date[a]).OrderBy(x => x.SECTION_TIME_START).LastOrDefault();
+                        if (check != null)
+                        {
+                            var tmp_TIME_START = Model.Where(x => x.SECTION_TIME_START == b && x.SECTION_DATE == date[a]).Last().SECTION_TIME_START;
+                            var tmp_TIME_END = Model.Where(x => x.SECTION_TIME_START == b && x.SECTION_DATE == date[a]).Last().SECTION_TIME_END;
+                            var TIME_START = int.Parse(tmp_TIME_START.ToString());
+                            var TIME_END = int.Parse(tmp_TIME_END.ToString());
+                            var TIME = (TIME_END - TIME_START) * 4;
+                            var uid = Model.Where(x => x.SECTION_TIME_START == b && x.SECTION_DATE == date[a]).OrderBy(x => x.SECTION_TIME_START).LastOrDefault().SUBJECT_ID;
+                            var uname = Model.Where(x => x.SECTION_TIME_START == b && x.SECTION_DATE == date[a]).OrderBy(x => x.SECTION_TIME_START).LastOrDefault().SUBJECT_NAME;
+                            <td id="@tid" bgcolor="#D3D3D3" colspan="@TIME">
+                                <div>
+                                    @Html.Hidden(tid, uid)
+                                    @Html.Hidden(tname, uname)
+                                    @Model.Where(x => x.SECTION_TIME_START == b && x.SECTION_DATE == date[a]).OrderBy(x => x.SECTION_TIME_START).LastOrDefault().SUBJECT_ID
+                                    @Model.Where(x => x.SECTION_TIME_START == b && x.SECTION_DATE == date[a]).OrderBy(x => x.SECTION_TIME_START).LastOrDefault().SUBJECT_NAME
+                                </div>
+                            </td>
+                        }
+                        else if (check1 == null)
+
+                        {
+                            <td id="@tid" height="50px" colspan="4"></td>
+                        }
+                    }
+                </tr>
+            }*@
     </tbody>
 </table>
