--- a/TestExcel/Views/TimeSchedule/Index.cshtml
+++ b/TestExcel/Views/TimeSchedule/Index.cshtml
@@ -11,22 +11,34 @@
 }
 <script>
     $(document).ready(function () {
+        var colspan;
         var date2 = ["M", "T", "W", "H", "F", "S"];
         $("#DDL_BRANCH").val(@ViewBag.DDLSelected);
         $("#DDL_BRANCH").change(function () {
             $("#BRANCH_FORM").submit();
-            });
-        $("#draggable tr td div").draggable({ cursor: "move", revert: "invalid" });
+        });
+        $(".draggable").draggable({
+            cursor: "move",
+            revert: "invalid",
+            start: function (event, ui) {
+                console.log("start");
+                colspan = $(this).parent().attr("colspan");
+                $(this).parent().attr("colspan", "4");
+            },
+            stop: function (event, ui) {
+                console.log("stop");
+                $(this).parent().attr("colspan", colspan);
+            }
+        });
         $(".droppable").droppable({
-            accept: "#draggable tr td div",
+            accept: ".draggable",
             drop: function (event, ui) {
                 console.log("drop");
                 $(this).removeClass("border").removeClass("over");
                 var dropped = ui.draggable;
                 var droppedOn = $(this);
+                $(this).attr("colspan", colspan);
                 $(dropped).detach().css({ top: 0, left: 0 }).appendTo(droppedOn);
-
-
             },
             over: function (event, elem) {
                 $(this).addClass("over");
@@ -146,6 +158,8 @@
 </table>
 <br />
 <br />
+<p name="gate" id="gate"></p>
+
 @using (Html.BeginForm("updatedata", "TimeSchedule", FormMethod.Post))
 {
     <table class="table table-responsive" id="TableLocation2" style="font-size:14px" align=center border=1 cellspacing=0 cellpadding=3 bgcolor=#F1F1FD>
@@ -168,7 +182,7 @@
                 <td colspan="4" width="60px"><b>21:00</b></td>
             </tr>
         </thead>
-        <tbody id="draggable">
+        <tbody>
             @for (int a = 0; a < 6; a++)
             {
                 <tr>
@@ -191,7 +205,7 @@
                             var uid = Model.Where(x => x.SECTION_TIME_START == b && x.SECTION_DATE == date[a]).OrderBy(x => x.SECTION_TIME_START).LastOrDefault().SUBJECT_ID;
                             var uname = Model.Where(x => x.SECTION_TIME_START == b && x.SECTION_DATE == date[a]).OrderBy(x => x.SECTION_TIME_START).LastOrDefault().SUBJECT_NAME;
                             <td id="@tid" colspan="@TIME" class="droppable">
-                                <div style="background-color:#D3D3D3;width:100%;height:100%">
+                                <div class="draggable" style="background-color:#D3D3D3;width:100%;height:100%">
                                     @Html.Hidden(tid, uid)
                                     @Html.Hidden(tname, uname)
                                     @Model.Where(x => x.SECTION_TIME_START == b && x.SECTION_DATE == date[a]).OrderBy(x => x.SECTION_TIME_START).LastOrDefault().SUBJECT_ID
